--- a/src/components/filter-menu/filter-menu.scss
+++ b/src/components/filter-menu/filter-menu.scss
@@ -1,9 +1,9 @@
-@use '../../utils/utils.scss';
+@use '../../global.scss';
 
 .filter-menu {
   .filter-menu-wrapper {
     position: relative;
-    background: utils.$defaultGrey700;
+    background: global.$defaultGrey700;
     border-radius: 12px;
 
     .filter-menu-title {
@@ -17,7 +17,7 @@
         border-radius: 6px;
 
         i {
-          color: utils.$defaultWhite;
+          color: global.$defaultWhite;
           font-size: 18px;
 
           p {
@@ -26,10 +26,10 @@
         }
 
         &:hover {
-          background: utils.$defaultWhite;
+          background: global.$defaultWhite;
 
           i {
-            color: utils.$defaultRed;
+            color: global.$defaultRed;
           }
         }
       }
@@ -39,7 +39,7 @@
       position: absolute;
       width: 100%;
       bottom: 0;
-      background: utils.$defaultWhite;
+      background: global.$defaultWhite;
       overflow-y: scroll;
     }
   }
@@ -68,7 +68,7 @@
     content: '';
     width: 80%;
     height: 1px;
-    background: utils.$defaultGrey200;
+    background: global.$defaultGrey200;
   }
 
   .filter-title {
@@ -88,12 +88,12 @@
       -moz-user-select: none;
 
       &:hover {
-        background: utils.$defaultGrey100;
+        background: global.$defaultGrey100;
         cursor: pointer;
       }
 
       &:active {
-        background: utils.$defaultGrey200;
+        background: global.$defaultGrey200;
       }
     }
 
@@ -105,13 +105,13 @@
       align-items: center;
       font-size: 24px;
       border-radius: 8px;
-      color: utils.$defaultGrey500;
+      color: global.$defaultGrey500;
 
       &:hover {
-        background: utils.$defaultBlue;
+        background: global.$defaultBlue;
 
         i {
-          color: utils.$defaultWhite;
+          color: global.$defaultWhite;
         }
       }
     }
@@ -120,41 +120,41 @@
 
 .types-filter {
   &:after {
-    background: utils.$optionColorRed;
+    background: global.$optionColorRed;
   }
 
   h4 {
-    color: utils.$optionColorRed;
+    color: global.$optionColorRed;
   }
 }
 
 .abilities-filter {
   &:after {
-    background: utils.$optionColorOrange;
+    background: global.$optionColorOrange;
   }
 
   h4 {
-    color: utils.$optionColorOrange;
+    color: global.$optionColorOrange;
   }
 }
 
 .stats-filter {
   &:after {
-    background: utils.$optionColorGreen;
+    background: global.$optionColorGreen;
   }
 
   h4 {
-    color: utils.$optionColorGreen;
+    color: global.$optionColorGreen;
   }
 }
 
 .moves-filter {
   &:after {
-    background: utils.$optionColorPurple;
+    background: global.$optionColorPurple;
   }
 
   h4 {
-    color: utils.$optionColorPurple;
+    color: global.$optionColorPurple;
   }
 }
 
