--- a/src/main.scss
+++ b/src/main.scss
@@ -1,32 +1,9 @@
-@use './utils/utils.scss';
+@use './global.scss';
+@use './reset.scss';
 
-h1 {
-  text-align: center;
-  color: utils.$defaultWhite;
-  letter-spacing: 1px;
-}
-
-h3 {
-  color: utils.$defaultWhite;
-  font-size: 20px;
-  font-weight: 500;
-}
-
-h4 {
-  font-size: 20px;
-  font-weight: 400;
-}
-
-h5 {
-  font-weight: 500;
-  font-size: 12px;
-  letter-spacing: 1px;
-}
-
-.main-title {
-  margin: 24px auto;
-}
-
-section {
-  margin: 0 20px;
+main {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
