--- a/src/reset.scss
+++ b/src/reset.scss
@@ -1,10 +1,11 @@
 @use './global.scss';
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@200;300;400;500;700&family=PT+Sans+Narrow&family=Pragati+Narrow&display=swap');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'noto sans TC', sans-serif;
+  font-family: 'pt sans narrow', 'noto sans TC', sans-serif;
 }
 
 body {
