feat: added loading spinning before API data fetched

--- a/src/components/filter-display/filter-display.scss
+++ b/src/components/filter-display/filter-display.scss
@@ -291,6 +291,7 @@
 
 .filter-button-wrapper {
   .filter-button {
+    position: relative;
     width: 100%;
     height: 100%;
     background: global.$defaultWhite;
