feat: added sorting function for pokemon-stats

--- a/src/components/filter-results/filter-results.scss
+++ b/src/components/filter-results/filter-results.scss
@@ -717,7 +717,7 @@
           gap: 4px;
 
           .subtitle {
-            padding: 8px;
+            padding: 8px 0;
             border-radius: 4px;
             font-size: 12px;
           }
