--- a/src/components/filter-menu/filter-menu.scss
+++ b/src/components/filter-menu/filter-menu.scss
@@ -12,7 +12,7 @@
       align-items: center;
 
       button {
-        width: 32px;
+        width: 40px;
         height: 40px;
         border-radius: 6px;
 
@@ -32,6 +32,10 @@
             color: global.$defaultRed;
           }
         }
+
+        &:active {
+          background: global.$defaultGrey300;
+        }
       }
     }
 
@@ -47,7 +51,6 @@
 
 .filter-wrapper {
   position: relative;
-  padding: 16px;
 
   &:after {
     position: absolute;
@@ -81,7 +84,6 @@
       display: flex;
       justify-content: start;
       align-items: center;
-      padding-left: 8px;
       border-radius: 8px;
       user-select: none;
       -webkit-user-select: none;
@@ -114,6 +116,55 @@
           color: global.$defaultWhite;
         }
       }
+
+      &:active {
+        background: darken(global.$defaultBlue, 20);
+      }
+    }
+  }
+}
+
+.filter-option-container {
+  flex-direction: column;
+  gap: 14px;
+  padding: 16px;
+
+  .additional-setting {
+    display: flex;
+    gap: 12px;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    background: global.$defaultGrey100;
+    border-radius: 6px;
+    padding: 12px;
+  }
+
+  .setting-option {
+    display: flex;
+    flex-direction: row;
+    gap: 12px;
+
+    input {
+      width: auto;
+    }
+
+    p {
+      font-size: 14px;
+    }
+  }
+
+  .option-title-group {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 12px;
+
+    button {
+      width: 32px;
+      height: 32px;
+      font-size: 16px;
+      border-radius: 99px;
     }
   }
 }
@@ -126,6 +177,27 @@
   h4 {
     color: global.$optionColorRed;
   }
+
+  .choose-type {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 4px;
+
+    p {
+      font-size: 14px;
+    }
+
+    img {
+      width: 24px;
+      height: auto;
+    }
+
+    .selected-cleared-all-toggle {
+      grid-column: span 3;
+      height: 31px;
+      margin: 4px;
+    }
+  }
 }
 
 .abilities-filter {
@@ -135,6 +207,24 @@
 
   h4 {
     color: global.$optionColorOrange;
+  }
+
+  .classify-by-quantity-option {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 8px;
+    padding-top: 12px;
+
+    .toggle-button {
+      &:hover {
+        background: global.$defaultGrey100;
+        cursor: pointer;
+      }
+
+      &:active {
+        background: global.$defaultGrey200;
+      }
+    }
   }
 }
 
@@ -155,6 +245,18 @@
 
   h4 {
     color: global.$optionColorPurple;
+  }
+
+  .option-button-group {
+    display: grid;
+    grid-template-columns: 1.25fr 1fr;
+    gap: 12px;
+    height: 48px;
+
+    button {
+      font-size: 16px;
+      border-radius: 8px;
+    }
   }
 }
 
@@ -184,6 +286,14 @@
   }
 }
 
+.filter-wrapper {
+  padding: 16px;
+
+  .option-visible-toggle {
+    padding-left: 8px;
+  }
+}
+
 .menu-invisible {
   right: -364px;
   transform: scaleX(0);
@@ -194,6 +304,53 @@
   right: 0;
   transform: scaleX(1);
   opacity: 1;
+}
+
+.option-invisible {
+  display: none;
+  opacity: 0;
+}
+
+.option-visible {
+  display: flex;
+  opacity: 1;
+}
+
+.checkbox-selected {
+  &::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    outline: 3px global.$defaultBlue solid;
+    border: 2px transparent solid;
+    border-radius: 6px;
+  }
+}
+
+.toggle-button {
+  position: relative;
+  border-radius: 4px;
+  margin: 4px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+
+  input[type='checkbox'] {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    outline: none;
+  }
+}
+
+.toggle-button {
+  padding: 8px;
 }
 
 @media screen and (max-width: 1024px) {
@@ -228,6 +385,59 @@
     }
   }
 
+  .filter-wrapper {
+    padding: 16px;
+
+    .filter-title {
+      padding: 8px 8px 8px 14px;
+    }
+
+    .option-visible-toggle {
+      padding-left: 16px;
+    }
+  }
+
+  .filter-option-container {
+    padding: 16px;
+
+    .setting-option {
+      input {
+        width: auto;
+      }
+    }
+  }
+
+  .types-filter {
+    &:after {
+      background: global.$optionColorRed;
+    }
+
+    h4 {
+      color: global.$optionColorRed;
+    }
+
+    .choose-type {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 4px;
+
+      p {
+        font-size: 14px;
+      }
+
+      img {
+        width: 24px;
+        height: auto;
+      }
+
+      .selected-cleared-all-toggle {
+        grid-column: span 3;
+        height: 31px;
+        margin: 4px;
+      }
+    }
+  }
+
   .menu-invisible {
     right: -364px;
     opacity: 0;
@@ -236,6 +446,10 @@
   .menu-visible {
     right: 0;
     opacity: 1;
+  }
+
+  .toggle-button {
+    padding: 8px;
   }
 }
 
@@ -251,7 +465,7 @@
       height: 100vh;
 
       .filter-menu-title {
-        padding: 16px 32px 16px 8px;
+        padding: 16px;
 
         .title-group {
           display: flex;
@@ -262,12 +476,62 @@
           .close-menu {
             display: block;
           }
+
+          h3 {
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+          }
         }
       }
 
       .scroll-wrapper {
         height: calc(100vh - 72px);
         border-radius: 12px;
+      }
+    }
+  }
+
+  .filter-wrapper {
+    padding: 16px 6px;
+
+    .option-visible-toggle {
+      padding-left: 16px;
+    }
+  }
+
+  .filter-option-container {
+    padding: 16px 24px;
+
+    .setting-option {
+      input {
+        width: 20px;
+      }
+    }
+  }
+
+  .types-filter {
+    &:after {
+      background: global.$optionColorRed;
+    }
+
+    h4 {
+      color: global.$optionColorRed;
+    }
+
+    .choose-type {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 4px;
+
+      p {
+        display: none;
+      }
+
+      .selected-cleared-all-toggle {
+        grid-column: span 2;
+        height: 44px;
+        margin: 4px;
       }
     }
   }
@@ -280,5 +544,9 @@
   .menu-visible {
     right: 0;
     opacity: 1;
+  }
+
+  .toggle-button {
+    padding: 10px 8px;
   }
 }
