--- a/src/reset.scss
+++ b/src/reset.scss
@@ -61,3 +61,61 @@ h5 {
 section {
   margin: 0 20px;
 }
+
+@media screen and (max-width: 1024px) {
+  h1 {
+    text-align: center;
+    color: global.$defaultWhite;
+    letter-spacing: 1px;
+  }
+
+  h3 {
+    color: global.$defaultWhite;
+    font-size: 20px;
+    font-weight: 500;
+  }
+
+  h4 {
+    font-size: 20px;
+    font-weight: 400;
+  }
+
+  h5 {
+    font-weight: 500;
+    font-size: 12px;
+    letter-spacing: 1px;
+  }
+
+  section {
+    margin: 0 20px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  h1 {
+    text-align: center;
+    color: global.$defaultWhite;
+    letter-spacing: 1px;
+  }
+
+  h3 {
+    color: global.$defaultWhite;
+    font-size: 20px;
+    font-weight: 500;
+  }
+
+  h4 {
+    font-size: 18px;
+    font-weight: 400;
+  }
+
+  h5 {
+    font-weight: 500;
+    font-size: 12px;
+    letter-spacing: 1px;
+  }
+
+  section {
+    margin: 0 12px;
+  }
+}
