refactor: refactor filter-menu code

--- a/src/components/filter-menu/filter-menu.scss
+++ b/src/components/filter-menu/filter-menu.scss
@@ -319,9 +319,9 @@
   max-height: 0px;
   height: auto;
   transition:
-    opacity 0.15s ease,
+    opacity 0.1s ease,
     padding 0.3s ease,
-    max-height 0.03s ease;
+    max-height 0.08s ease;
 }
 
 .option-visible {
@@ -332,7 +332,10 @@
   opacity: 1;
   max-height: 1920px;
   height: auto;
-  transition: all 0.3s ease;
+  transition:
+    opacity 0.1s ease,
+    padding 0.3s ease,
+    max-height 0.8s linear;
 }
 
 .checkbox-selected {
