feat: added filter-menu types options UI

--- a/src/components/filter-menu/filter-menu.scss
+++ b/src/components/filter-menu/filter-menu.scss
@@ -196,8 +196,14 @@
       height: auto;
     }
 
-    .selected-cleared-all-toggle {
-      grid-column: span 3;
+    .select-clear-all-toggle {
+      grid-column: span 2;
+      height: 31px;
+      margin: 4px;
+    }
+
+    .reverse-all-toggle {
+      grid-column: span 1;
       height: 31px;
       margin: 4px;
     }
@@ -338,20 +344,20 @@
     max-height 0.8s linear;
 }
 
-.checkbox-selected {
-  &::before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    outline: 3px global.$defaultBlue solid;
-    border: 2px transparent solid;
-    border-radius: 6px;
-  }
-}
+// .checkbox-checked {
+//   &::before {
+//     content: '';
+//     position: absolute;
+//     width: 100%;
+//     height: 100%;
+//     left: 50%;
+//     top: 50%;
+//     transform: translate(-50%, -50%);
+// outline: 3px global.$defaultBlue solid;
+// border: 2px transparent solid;
+// border-radius: 6px;
+//   }
+// }
 
 .toggle-button {
   position: relative;
@@ -368,6 +374,49 @@
     -webkit-appearance: none;
     -moz-appearance: none;
     outline: none;
+  }
+
+  .type-checkbox::after {
+    position: absolute;
+    content: '';
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 101%;
+    height: 101%;
+    background: rgba(255, 255, 255, 0.6);
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  .type-checkbox:checked::after {
+    position: absolute;
+    content: '';
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    padding: 2px;
+    border: 3px global.$defaultBlue solid;
+    border-radius: 8px;
+  }
+
+  .type-checkbox:checked::before {
+    position: absolute;
+    content: '✓';
+    text-align: center;
+    vertical-align: center;
+    font-weight: 900;
+    color: white;
+    top: -5px;
+    left: -5px;
+    width: 20px;
+    height: 20px;
+    border-radius: 8px 0 8px 0;
+    background: global.$defaultBlue;
+    box-shadow: 0 0 0 2px rgba(global.$defaultWhite, 1);
   }
 }
 
@@ -450,8 +499,14 @@
         height: auto;
       }
 
-      .selected-cleared-all-toggle {
-        grid-column: span 3;
+      .select-clear-all-toggle {
+        grid-column: span 2;
+        height: 31px;
+        margin: 4px;
+      }
+
+      .reverse-all-toggle {
+        grid-column: span 1;
         height: 31px;
         margin: 4px;
       }
@@ -551,15 +606,21 @@
 
     .choose-type {
       display: grid;
-      grid-template-columns: repeat(4, 1fr);
+      grid-template-columns: repeat(3, 1fr);
       gap: 4px;
 
       p {
         display: none;
       }
 
-      .selected-cleared-all-toggle {
+      .select-clear-all-toggle {
         grid-column: span 2;
+        height: 44px;
+        margin: 4px;
+      }
+
+      .reverse-all-toggle {
+        grid-column: span 1;
         height: 44px;
         margin: 4px;
       }
